# adk-playground

./: .gitignore  DOCKER_PLAN.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  REFACTORING_PLAN.md  REFACTORING_REPORT.md  RUN_IMPROVEMENTS.md  SETUP.md  a.py  build.sh  file_session_service.py  pyproject.toml  requirements.txt  run.sh  setup.sh  start.sh
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml
adk_playground/: __init__.py
adk_playground/frontend/assets/: index-C2QVX1Z4.css  jq-CmjIRGCm.js
agents/: __init__.py  agent_config_generator.py  callback_code_generator.py  prompt_generator.py  tool_code_generator.py
backend/: adk_evaluation_service.py  agent_runner.py  ai_task_runner.py  code_executor.py  code_generator.py  evaluation_service.py  knowledge_service.py  known_mcp_servers.py  main.py  mcp_config.py  model_service.py  models.py  project_manager.py  requirements.txt  runtime.py  skillset.py
backend/agents/agent_config_generator/: agent.py
backend/agents/eval_set_generator/: __init__.py  agent.py
backend/sandbox/: allowlist_persistence.py  api.py  docker_manager.py  mcp_manager.py  models.py  webhook_handler.py
backend/sandbox/docker/: Dockerfile.agent  Dockerfile.gateway  agent_runner.py  gateway_addon.py  mcp_spawner.py
backend/sandbox/tests/: __init__.py  test_approval_flow.py
backend/tracking/: __init__.py  plugin.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  monaco-config.ts
frontend/src/components/: AgentEditor.tsx  AgentGraph.tsx  AgentsPanel.tsx  AppConfigPanel.tsx  CallbacksPanel.tsx  CodePanel.tsx  EvalPanel.tsx  KnowledgePanel.tsx  ModelAutocomplete.css  ModelAutocomplete.tsx  ModelConfigForm.css  ModelConfigForm.tsx  ProjectEditor.tsx  ProjectList.tsx  RubricEditor.tsx  Run2Panel.tsx  RunPanel.tsx  SkillSetsPanel.tsx  ToolsPanel.tsx
frontend/src/components/sandbox/: NetworkApprovalDialog.tsx  PatternTester.tsx  SandboxSettings.tsx  harExport.ts
frontend/src/hooks/: useStore.ts
frontend/src/styles/: fonts.css  globals.css
frontend/src/utils/: api.ts  types.ts
projects/: 4ac92b8c.yaml  7061d4a2.yaml  7cd3d05b.yaml  7eaac9cf.yaml  b00f53f5.yaml  ea6012c0.yaml
projects/ea6012c0/tools/: tools.py
tests/: conftest.py  test_callbacks.py  test_integration.py  test_parallel_loop_agents.py  test_project_parsing.py  test_runtime.py
tracing_plugin/example_agent/: agent.py
